# typst-rrss

./: .gitignore  AUDIT_INDEX.md  AUDIT_REPORT.md  EXECUTIVE_SUMMARY.md  FIXES_CHECKLIST.md  FIXES_SUGGESTED.md  README.md  atardecer.typ  carrusel-test.typ  ciencia.typ  cosmovisiones.typ  creacion.typ  flake.nix  generate.sh  lib.typ  main.typ  material-demo.typ  oceano.typ  posts.toml  pyproject.toml  quote-einstein.typ  rrss  rrss.py  to_append_rrss.py
.cargo/: config.toml
.idx/: dev.nix
content/: promo.typ  quote.typ  stat.typ  tip.typ
lib/: dispatcher.typ  elements.typ  layouts.typ  theme.typ
lib/layouts/: article.typ  carousel.typ  centered.typ  hero.typ  quote.typ  split.typ  stat.typ
rrss-cli-rs/: Cargo.toml
rrss-cli-rs/.cargo/: config.toml
rrss-cli-rs/src/: build.rs  cli.rs  colors.rs  config.rs  constants.rs  generate.rs  images.rs  lib.rs  main.rs  templates.rs  themes.rs
rrss-pkg/: typst.toml
rrss-pkg/lib/: elements.typ  layouts.typ  lib.typ  theme.typ
rrss-pkg/lib/layouts/: article.typ  carousel.typ  centered.typ  hero.typ  quote.typ  split.typ  stat.typ
rrss_cli/: cli.py  colors.py  config.py  images.py  templates.py
rust-fast-compile/: .gitignore
rust-fast-compile/.cargo/: config.toml
templates/: facebook-post.typ  instagram-post.typ  instagram-story.typ  linkedin-post.typ  og-image.typ  twitter-post.typ
tests/: assets  posts.toml  test-forest.typ  test-ocean.typ
