[package]
name = "rrss-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
color-thief = "0.2.2"
image = "0.25.9"
noise = "0.9.0"
palette = { version = "0.7.6", features = ["std"] }
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.0"
walkdir = "2.5.0"
