[package]
name = "rrss-cli-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
color-thief = "0.2.2"
image = "0.25.9"
noise = "0.9.0"
palette = { version = "0.7.6", features = ["std"] }
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.0"
walkdir = "2.5.0"
thaimeleon_lib = { git = "https://codeberg.org/thairanaru/thaimeleon" }
material-colors = { version = "0.2.0", features = ["image"] }
quantette = "0.5.1"

[profile.dev]
opt-level = 0
debug = 0
split-debuginfo = "unpacked"
panic = "abort"
incremental = true

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
